--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <p>
         حضرة رئيس الكلية المحترم،<br><br>
         في ظل الظروف الأمنية الصعبة التي نمر بها في البلاد بسبب الحرب، نود نحن طلاب الكلية أن نعبر عن قلقنا الكبير وعدم قدرتنا على التركيز أو التفرغ للدراسة بالشكل المطلوب. إن استمرار عقد الامتحانات وتسليم الوظائف في هذه الظروف يضع علينا ضغطًا نفسيًا وعاطفيًا كبيرًا.<br><br>
-        نطالب حضرتكم بالنظر في هذه الأوضاع الطارئة واتخاذ خطوات من شأنها التسهيل علينا، مثل تمديد اضافي لمواعيد تسليم الوظائف وتأجيل او تبديل الامتحانات بمهمات اخرى، بما يتماشى مع الواقع الصعب الذي نعيشه جميعًا.<br><br>
+        نطالب حضرتكم بالنظر في هذه الأوضاع الطارئة واتخاذ خطوات من شأنها التسهيل علينا، من تمديد اضافي لمواعيد تسليم الوظائف وتأجيل او تبديل الامتحانات بمهمات اخرى، بما يتماشى مع الواقع الصعب الذي نعيشه جميعًا.<br><br>
         مع الاحترام،<br>
         طلاب الكلية.
         </p>
